fix:Fix the height for the work section and align well on mobile viewport

--- a/css/main.css
+++ b/css/main.css
@@ -93,17 +93,15 @@
   padding: 15px 0;
 }
 
-.svg-container {
-  gap: 20px;
-  margin-left: 20px;
-  margin-top: 10px;
+.svg-container a {
+  padding-left: 20px;
 }
 
 /* end of home styling */
 
 /* start of work styling */
 .work {
-  min-height: 470vh;
+  min-height: 350vh;
   margin: 30px auto;
   width: 80%;
   padding-top: 50px;
@@ -161,8 +159,7 @@
 
 .inner-work {
   flex-direction: column;
-  background-image:
-    linear-gradient(to top, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.73)),
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.52), rgba(0, 0, 0, 0.73)),
     url(../svg/professional.svg);
   background-position: center;
   background-repeat: no-repeat;
@@ -213,7 +210,7 @@
 }
 
 .about-div h2 {
-  font-size: 5rem;
+  font-size: 3rem;
   letter-spacing: 4px;
 }
 
